Changed package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "RHorv/interfaces",
+  "name": "rhorv/interfaces",
   "type": "project",
   "description": "Interfaces",
   "autoload": {
